Java version changed